--- a/package.json
+++ b/package.json
@@ -23,12 +23,20 @@
     "@nestjs/common": "11.1.1",
     "@nestjs/config": "4.0.2",
     "@nestjs/core": "11.1.1",
+    "@nestjs/jwt": "^11.0.0",
+    "@nestjs/passport": "^11.0.5",
     "@nestjs/platform-express": "11.1.1",
     "@prisma/client": "^6.8.2",
     "bcrypt": "6.0.0",
     "class-transformer": "0.5.1",
     "class-validator": "0.14.2",
+    "cookie-parse": "^0.4.0",
+    "cookie-parser": "^1.4.7",
+    "ms": "^2.1.3",
     "nestjs-pino": "4.4.0",
+    "passport": "^0.7.0",
+    "passport-jwt": "^4.0.1",
+    "passport-local": "^1.0.0",
     "pino-http": "10.4.0",
     "reflect-metadata": "0.2.2",
     "rxjs": "7.8.2"
@@ -42,9 +50,13 @@
     "@swc/cli": "0.7.7",
     "@swc/core": "1.11.29",
     "@types/bcrypt": "5.0.2",
+    "@types/cookie-parser": "^1.4.8",
     "@types/express": "5.0.2",
     "@types/jest": "29.5.14",
+    "@types/ms": "^2.1.0",
     "@types/node": "22.15.21",
+    "@types/passport-jwt": "^4.0.1",
+    "@types/passport-local": "^1.0.38",
     "@types/supertest": "6.0.3",
     "eslint": "9.27.0",
     "eslint-config-prettier": "10.1.5",
