--- a/package.json
+++ b/package.json
@@ -26,6 +26,9 @@
     "@nestjs/jwt": "^11.0.0",
     "@nestjs/passport": "^11.0.5",
     "@nestjs/platform-express": "11.1.1",
+    "@nestjs/platform-socket.io": "^11.1.3",
+    "@nestjs/serve-static": "^5.0.3",
+    "@nestjs/websockets": "^11.1.3",
     "@prisma/client": "^6.8.2",
     "bcrypt": "6.0.0",
     "class-transformer": "0.5.1",
@@ -39,7 +42,8 @@
     "passport-local": "^1.0.0",
     "pino-http": "10.4.0",
     "reflect-metadata": "0.2.2",
-    "rxjs": "7.8.2"
+    "rxjs": "7.8.2",
+    "stripe": "^18.2.1"
   },
   "devDependencies": {
     "@eslint/eslintrc": "3.3.1",
@@ -54,6 +58,7 @@
     "@types/express": "5.0.2",
     "@types/jest": "29.5.14",
     "@types/ms": "^2.1.0",
+    "@types/multer": "^1.4.12",
     "@types/node": "22.15.21",
     "@types/passport-jwt": "^4.0.1",
     "@types/passport-local": "^1.0.38",
